--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -14,7 +14,7 @@
             app:enterAnim="@anim/fade_in"
             app:exitAnim="@anim/fade_out"
             app:popUpTo="@id/loginFragment"
-            app:popUpToInclusive="true" />
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
         android:id="@+id/welcomeFragment"
@@ -24,7 +24,8 @@
             android:id="@+id/action_welcomeFragment_to_instructionsFragment"
             app:destination="@id/instructionsFragment"
             app:enterAnim="@anim/slide_in_up"
-            app:exitAnim="@anim/slide_out_up" />
+            app:exitAnim="@anim/slide_out_up"
+            app:popUpToInclusive="false"/>
     </fragment>
     <fragment
         android:id="@+id/instructionsFragment"
@@ -35,7 +36,7 @@
             app:destination="@id/beerListFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
-            app:popUpTo="@id/loginFragment"
+            app:popUpTo="@id/welcomeFragment"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
@@ -58,6 +59,7 @@
             app:destination="@id/beerListFragment"
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
-            app:popUpTo="@id/instructionsFragment" />
+            app:popUpTo="@id/beerListFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
